--- a/Frontend/LoginRegisterExample/app/src/main/res/layout/detail.xml
+++ b/Frontend/LoginRegisterExample/app/src/main/res/layout/detail.xml
@@ -19,7 +19,8 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/store_picture"
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -35,7 +36,7 @@
             android:layout_marginLeft="20dp">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/store_name"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:text="먹거리 및 놀거리 점포이름"
@@ -61,7 +62,7 @@
                 android:src="@drawable/star"/>
 
             <TextView
-                android:id="@+id/score"
+                android:id="@+id/store_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
@@ -71,7 +72,7 @@
                 android:layout_marginLeft="5dp"/>
 
             <TextView
-                android:id="@+id/commitreview"
+                android:id="@+id/store_review"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
@@ -79,14 +80,14 @@
                 android:gravity="center_vertical"
                 android:textSize="15dp"/>
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/blogreview"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:text="블로그리뷰 00"
                 android:gravity="center_vertical"
-                android:textSize="15dp"/>
+                android:textSize="15dp"/>-->
         </LinearLayout>
 
         <LinearLayout
@@ -134,20 +135,20 @@
 
                         <ImageView
                             android:id="@+id/img_phone"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_weight="1"
                             android:layout_centerHorizontal="true"
                             android:src="@drawable/phone_icon"/>
 
                         <TextView
-                            android:id="@+id/text_phone"
+                            android:id="@+id/store_phoneNumber"
                             android:layout_width="wrap_content"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:text="000 - 0000 - 0000"
                             android:gravity="center_vertical"
-                            android:textSize="15dp"
+                            android:textSize="25dp"
                             android:layout_marginLeft="5dp"/>
                     </LinearLayout>
 
@@ -160,14 +161,14 @@
 
                         <ImageView
                             android:id="@+id/img_map"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_weight="1"
                             android:layout_centerHorizontal="true"
                             android:src="@drawable/maker_icon"/>
 
                         <TextView
-                            android:id="@+id/text_map"
+                            android:id="@+id/store_address"
                             android:layout_width="wrap_content"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
@@ -186,20 +187,20 @@
 
                         <ImageView
                             android:id="@+id/img_time"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_weight="1"
                             android:layout_centerHorizontal="true"
                             android:src="@drawable/clock_icon"/>
 
                         <TextView
-                            android:id="@+id/text_time"
+                            android:id="@+id/store_workingTime"
                             android:layout_width="wrap_content"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
                             android:text="10:00 ~ 21:00"
                             android:gravity="center_vertical"
-                            android:textSize="15dp"
+                            android:textSize="25dp"
                             android:layout_marginLeft="5dp"/>
                     </LinearLayout>
 
@@ -212,8 +213,8 @@
 
                         <ImageView
                             android:id="@+id/img_price"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_weight="1"
                             android:layout_centerHorizontal="true"
                             android:src="@drawable/won_icon"/>
@@ -224,21 +225,28 @@
                                 android:orientation="vertical">
 
                                 <TextView
-                                    android:id="@+id/text_price_2p"
                                     android:layout_width="wrap_content"
                                     android:layout_height="fill_parent"
                                     android:layout_weight="1"
-                                    android:text="2인----------------44,000원"
+                                    android:text="menu"
                                     android:gravity="center_vertical"
-                                    android:textSize="15dp"
+                                    android:textSize="25dp"
+                                    android:layout_marginLeft="5dp"/>
+                                <TextView
+                                    android:id="@+id/store_menu"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="fill_parent"
+                                    android:layout_weight="1"
+                                    android:gravity="center_vertical"
+                                    android:textSize="25dp"
                                     android:layout_marginLeft="5dp"/>
 
-                                <TextView
+                                <!--<TextView
                                     android:id="@+id/text_price_3p"
                                     android:layout_width="wrap_content"
                                     android:layout_height="fill_parent"
                                     android:layout_weight="1"
-                                    android:text="3인----------------60,000원"
+                                    android:text="3인&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;60,000원"
                                     android:gravity="center_vertical"
                                     android:textSize="15dp"
                                     android:layout_marginLeft="5dp"/>
@@ -247,7 +255,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="fill_parent"
                                     android:layout_weight="1"
-                                    android:text="4인----------------76,000원"
+                                    android:text="4인&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;76,000원"
                                     android:gravity="center_vertical"
                                     android:textSize="15dp"
                                     android:layout_marginLeft="5dp"/>
@@ -256,10 +264,10 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="fill_parent"
                                     android:layout_weight="1"
-                                    android:text="5인----------------90,000원"
+                                    android:text="5인&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;90,000원"
                                     android:gravity="center_vertical"
                                     android:textSize="15dp"
-                                    android:layout_marginLeft="5dp"/>
+                                    android:layout_marginLeft="5dp"/>-->
                             </LinearLayout>
                     </LinearLayout>
 
@@ -275,9 +283,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="fill_parent"
                             android:layout_weight="1"
-                            android:text="REVIEW"
+                            android:text="소개"
                             android:gravity="center_vertical"
-                            android:textSize="20dp"
+                            android:textSize="30dp"
                             android:layout_marginLeft="5dp"/>
                     </LinearLayout>
 
@@ -295,27 +303,27 @@
                             android:layout_marginTop="5dp"
                             android:layout_marginLeft="20dp">
 
-                            <ImageView
+                            <!--<ImageView
                                 android:id="@+id/img_review1"
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:layout_weight="1"
                                 android:layout_centerHorizontal="true"
-                                android:src="@drawable/user_icon"/>
+                                android:src="@drawable/user_icon"/>-->
 
                             <TextView
-                                android:id="@+id/text_review1"
+                                android:id="@+id/store_introduce"
                                 android:layout_width="wrap_content"
                                 android:layout_height="fill_parent"
                                 android:layout_weight="1"
                                 android:text="맛이있네요"
                                 android:gravity="center_vertical"
-                                android:textSize="15dp"
+                                android:textSize="20dp"
                                 android:layout_marginLeft="10dp"/>
 
                         </LinearLayout>
 
-                        <LinearLayout
+                        <!--<LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -367,11 +375,11 @@
                                 android:textSize="15dp"
                                 android:layout_marginLeft="10dp"/>
 
-                        </LinearLayout>
+                        </LinearLayout>-->
 
                     </LinearLayout>
 
-                    <LinearLayout
+                    <!--<LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
@@ -422,7 +430,7 @@
                             android:layout_centerHorizontal="true"
                             android:src="@drawable/pizza_icon"
                             android:layout_margin="5dp"/>
-                    </LinearLayout>
+                    </LinearLayout>-->
 
                 </LinearLayout>
             </ScrollView>
